--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_EMAILJS_PUBLIC_KEY=J5U1JMlnOWZuzmY04
-REACT_APP_EMAILJS_SERVICE_ID=service_1ru45xj
+#REACT_APP_EMAILJS_SERVICE_ID=service_1ru45xj
+REACT_APP_EMAILJS_SERVICE_ID=service_xla42pq
 REACT_APP_EMAILJS_TEMPLATE_ID=template_4opy0sw
